# reTeXt

./: .gitignore  CMakeLists.txt  README.md  buildSymbols.js  combinedGenAlgorithm.js  config.json  genAlgorithm.js  package.json  reTeXt.js  router.js  server.js  temp.json  view.js
docs/: README.md  readme.txt
gen_modules/: bin.json  comparison.js  compileBin.js  cropBorders.js  genComparison.js  genFilter.js  genObject.js  genProcessingArea.js  genSearchSymbols.js  genSelection.js  pngToBin.js  pngToBinBlock.js  searchArea.js  splitBlocks.js  symbols.json
headers/: methods_image.h  perceptron.h
source/: index.html  main.c  methods_image.c  perceptron.c
source/scripts/: index.js
source/style/: index.css
source/templates/: main.js  processing.js  result.js
source_server/styles/: main.css
test/: libraryTestComparison.json  test.js  testComparison.js  testScan.js
views/: compile.ejs
